tests/invalid/ConstrainedInt_Invalid_4.whiley
function f(int x) -> (int y)
requires x != 0
ensures y != 1:
    //
    return x
